Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -53,7 +53,8 @@
 }
 
 .info-panel h1,
-.info-panel h2 {
+.info-panel h2,
+.info-panel span {
     font-family: 'Rubik Distressed', cursive;
     font-weight: 400;
     text-transform: capitalize;
@@ -74,7 +75,7 @@
 }
 
 .headers h1,
-.phone h2 {
+.phone span {
     font-size: 7rem;
     color: var(--orange);
 }
@@ -112,17 +113,11 @@
     background-size: cover;
     transform: rotate(45deg);
     cursor: pointer;
-    z-index: 1;
 }
 
 .road-sign a {
     font-size: 38px;
     transform: rotate(-45deg);
-}
-
-.phone {
-    position: relative;
-    z-index: 1;
 }
 
 
@@ -230,7 +225,7 @@
         height: 120px;
         width: 120px;
     }
-    .phone h2 {
+    .phone span {
         font-size: 2rem;
     }
 }
@@ -286,7 +281,7 @@
         height: 180px;
         width: 180px;
     }
-    .phone h2 {
+    .phone span {
         font-size: 3rem;
     }
 }
@@ -312,7 +307,7 @@
         height: 200px;
         width: 200px;
     }
-    .phone h2 {
+    .phone span {
         font-size: 4rem;
     }
 }
@@ -338,7 +333,7 @@
     .phone {
         align-self: center;
     }
-    .phone h2 {
+    .phone span {
         font-size: 4rem;
     }
 }
@@ -419,7 +414,7 @@
     .phone {
         align-self: center;
     }
-    .phone h2 {
+    .phone span {
         font-size: 2rem;
         white-space: nowrap;
     }
@@ -452,7 +447,7 @@
         height: 200px;
         width: 200px;
     }
-    .phone h2 {
+    .phone span {
         font-size: 3rem;
     }
 }
@@ -467,7 +462,7 @@
     .call-button {
         margin-bottom: 50px;
     }
-    .phone h2 {
+    .phone span {
         font-size: 4rem;
     }
 }
